--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flight-shedule",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://solarage.github.io/flight-schedule/",
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
